-*- mode: fundamental -*-

[ ] Support bigstring (zero copy)

4.0.1:
[x] Fix harmless bug when scanning for seperators with more than one character.

4.0.0: Released 2018-08-16
[x] Support HEAD operation on objects.
[x] Change signature to use string for etag rather than
    Caml.Digest.t for clearer documentation
[x] Support Digest 0.6
[x] Remove dependency to Core
[x] Rewrite authentication code
[x] Switch to use Ptime for time conversion routines
[x] Support chunked transfer (put)
[x] Add streaming API
[x] Remove dependency on Cohttp
[x] Switch to dune
[x] Support IPv6
[x] Add option to use expect-100.
[x] Add option to limit result of ls
[x] Extend aws-cli
[x] Move region related function to own Region module

3.0.0: Released 2018-05-16
[x] Add parameter to specify scheme(http|https)
[x] Fix IAM handling for lwt version.
[x] Always use http when accessing s3.
[x] Support copying s3 -> s3
[x] Support multipart upload
[x] Support permanent/temporary redirect error code
[x] Return an error indicating the redirect to successive calls
[x] Switch to use Digistif module
[x] Remove support for gzip
    - Users can set the content encoding to gzip, and use ezgzip instead
[x] Compatibility with base.v0.11.0

2.0.0:
[x] Calling delete multi with an empty list is now a noop
[x] Return Md5.t digest type instead of strings
[x] Fix multi delete
[x] Support range get
[x] Compatibility with core >= v0.9.0
[x] Split into multiple packages (aws-s3-lwt / aws-s3-async / aws-s3)
[x] Funtorize over the concurrency monad (Async / Lwt)
[x] Dont compile with -safe-string
[x] return md5 of uploaded file

1.1.0:
[x] Switch to use ppx_deriving_protocol, and compile with -safe-string

1.0.0:
[x] Switch to use jbuilder and require core >= 0.9.

0.9.0:
[x] initial release